--- a/24 - Sticky Nav/style.css
+++ b/24 - Sticky Nav/style.css
@@ -23,6 +23,10 @@ body {
   transition: transform 0.5s;
 }
 
+.fixed-nav .site-wrap {
+  transform: scale(1);
+}
+
 header {
   text-align: center;
   height:50vh;
@@ -68,11 +72,15 @@ nav li {
   align-items: center;
 }
 
+.fixed-nav li.logo {
+  max-width: 500px;
+}
+
 li.logo {
   max-width:0;
   overflow: hidden;
   background: white;
-  transition: all .5s;
+  transition: all .4s;
   font-weight: 600;
   font-size: 30px;
 }
